// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package thanos;

option go_package = "cache";

import "gogoproto/gogo.proto";
import "github.com/grafana/mimir/pkg/mimirpb/mimir.proto";

option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

// Do not generate XXX fields to reduce memory footprint.
option (gogoproto.goproto_unkeyed_all) = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_sizecache_all) = false;

message CachedSeries {
  // cacheKey contains the non-hashed cache key, to detect hash collision.
  string                      cacheKey = 1;
  int64                       version = 2;
  int64                       start = 3;
  int64                       end = 4;
  repeated cortexpb.Metric    series = 5 [(gogoproto.nullable) = false];
  repeated IntermediateResultProto results = 6 [(gogoproto.nullable) = false];
}

// IntermediateResultProto is dualed with IntermediateResult, which decodes the histogram into Prometheus format.
// This is really just for sum_over_time; will work out polymorphism later.
message IntermediateResultProto {
  double             sumF = 1;
  bool               hasFloat = 2; // couldn't figure out how to make sumF nullable.
  double             sumC = 3;
  cortexpb.Histogram sumH = 4;
}
